# Mneme

./: .env.example  .gitignore  BITNET_KNOWN_ISSUES.md  DEPLOYMENT_REQUIREMENTS.md  Dockerfile  MNEME_FIX_PLAN.md  MOCKS_AND_PLACEHOLDERS.md  README.md  SPEC.md  TEST_DOCUMENTATION.md  coderag.config.example.json  docker-compose.yml  package-lock.json  pyproject.toml  tag_vocabulary.yaml
claude-code/plan/: FIX_REQUEST.md
claude-code/reasoning/: JOURNAL-hook-session-20260615-153439.md  JOURNAL-hook-session-20260615-153443.md  JOURNAL-hook-session-20260615-153449.md  JOURNAL-hook-session-20260615-153458.md  JOURNAL-hook-session-20260616-110045.md  JOURNAL-hook-session-20260616-111101.md  JOURNAL-hook-session-20260616-112418.md  JOURNAL-hook-session-20260616-112601.md  JOURNAL-hook-session-20260616-124037.md  JOURNAL-hook-session-20260616-124232.md  JOURNAL-hook-session-20260616-124348.md  JOURNAL-hook-session-20260616-125635.md  doc-result.txt  skill-events.md  (+96 more)
scripts/: alter_tags.py  auto_reload.sh  backfill_embeddings.py  dedupe_chunks.py  dev_server.py  enrich_tags.py  fix_tags.py  fix_tags_progress.py  ingest_full.py  ingest_full_manifest.json  reingest_failed.py  run-e2e.py  setup-bitnet.sh  setup-services.sh  setup.sh  start-llm-server.sh  verify.sh
src/: __init__.py  config.py  llm_utils.py  models.py  server.py
tests/: conftest.py  test_diff_engine.py  test_fix_tags.py  test_graph.py  test_guard.py  test_hook.py  test_ingestion.py  test_intent_cascade.py  test_memory_store.py  test_neo4j_repository.py  test_qdrant_search.py  test_retrieval.py  test_tagging.py
(+136 files in other folders)
